crates/rome_console/tests/markup/invalid_literal.stderr
error: unexpected non-string literal
 --> tests/markup/invalid_literal.rs:3:9
  |
3 |         123
  |         ^^^
