crates/rome_console/tests/markup/invalid_literal.rs
fn main() {
    rome_console::markup! {
        123
    }
}
